--- a/src/paginas/cadastro/Cadastro.css
+++ b/src/paginas/cadastro/Cadastro.css
@@ -1,5 +1,5 @@
 .fundoCadastro {
-    background-image: url(../../assets/cadastro.jpg);
+    background-image: url(../../assets/logo04.jpg);
       background-repeat: no-repeat;
       width: 100%;
       min-height: 100vh;
