--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,11 +1,3 @@
-.titulo{
-    color: blue;
-    text-align: center;
-}
-
-.img{
+.carrossel {
     width: 500px;
-    height: 500px;
-    display: block;
-    margin: 0 auto;
 }
